--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,22 @@
     tools:context=".MainActivity">
 
 
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/animView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <com.example.githubworkflowssample.NoSuggestionsWebView
+        android:id="@+id/webView"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/animforthumbnail"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-
+   <EditText
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:inputType="textNoSuggestions|textVisiblePassword"
+    app:layout_constraintTop_toBottomOf="@id/webView"
+    app:layout_constraintStart_toStartOf="@id/webView"
+    app:layout_constraintEnd_toEndOf="@id/webView"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
